--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
       <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
     </div>
   </div>
-  Ya tu sabe
+  Ya tu sabe 2
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
