autenticacion google a remover para entrega1

--- a/login.html
+++ b/login.html
@@ -51,9 +51,16 @@
     <button onclick="loginRedirect()" class="btn btn-lg btn-primary btn-block">Ingrese</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
   </form>
+<!--autenticacion google-->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id"
+    content="233627494745-05sc0lkijip6g7tqjkb75t0703ckfo9u.apps.googleusercontent.com">
+  <div class="g-signin2" data-onsuccess="onSignIn"></div>
+<!--autenticacion google-->
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/node.js"></script>
 </body>
 
 </html>
