--- a/login.html
+++ b/login.html
@@ -9,10 +9,7 @@
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
-
-  <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
@@ -30,14 +27,18 @@
       }
     }
   </style>
+
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/signin.css" rel="stylesheet">
 
 </head>
 
 <body class="text-center">
-  <form class="form-signin">
-    <img class="mb-4" src="C:\Users\marco\Documents\GitHub\repo_ecommerce\img\login.png" alt="" width="200" height="92">
+  <form class="form-signin" action="index.html">
+    <img class="mb-4" src="img/login.png" alt="" width="200" height="92">
     <h1 class="h3 mb-3 font-weight-normal">Ingrese su usuario</h1>
     <label for="inputEmail" class="sr-only">Correo electrónico</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
@@ -48,23 +49,19 @@
         <input type="checkbox" value="remember-me"> Recuerdame
       </label>
     </div>
-    <button onclick="loginRedirect()" class="btn btn-lg btn-primary btn-block">Ingrese</button>
+    <button class="btn btn-lg btn-primary btn-block">Ingrese</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
   </form>
-<!--autenticacion google-->
+  <!--autenticacion google-->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id"
     content="233627494745-05sc0lkijip6g7tqjkb75t0703ckfo9u.apps.googleusercontent.com">
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
-<!--autenticacion google-->
+  <!--autenticacion google-->
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
   <script src="js/node.js"></script>
 </body>
-<<<<<<< HEAD
-</html>
-=======
 
 </html>
->>>>>>> f0ac3f58b74d3da9bd9ad4f2a51791c6699ec53b
