--- a/login.html
+++ b/login.html
@@ -40,8 +40,8 @@
   <form class="form-signin" action="index.html">
     <img class="mb-4" src="img/login.png" alt="" width="200" height="92">
     <h1 class="h3 mb-3 font-weight-normal">Ingrese su usuario</h1>
-    <label for="inputEmail" class="sr-only">Correo electrónico</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+    <label for="inputEmail" class="sr-only">Usuario o Correo electrónico</label>
+    <input type="textbox" id="inputEmail" class="form-control" placeholder="Usuario o Email" required autofocus>
     <label for="inputPassword" class="sr-only">Contraseña</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
