--- a/login.html
+++ b/login.html
@@ -6,8 +6,14 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <title>eMercado - Todo lo que busques está aquí</title>
 
+  <!--autenticacion google-->
+  <meta name="google-signin-client_id"
+    content="233627494745-05sc0lkijip6g7tqjkb75t0703ckfo9u.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!--autenticacion google-->
+
+  <title>eMercado - Todo lo que busques está aquí</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
@@ -46,22 +52,22 @@
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
       <label>
+        <!--autenticacion google-->
+        <div class="g-signin2" data-onsucess="OnSignIn" data-scope="https://www.googleapis.com/auth/plus.login"
+          data-accesstype="offline" data-redirecturi="http://localhost:5500/index.html"></div>
+        <!--autenticacion google-->
         <input type="checkbox" value="remember-me"> Recuerdame
       </label>
+
     </div>
     <button class="btn btn-lg btn-primary btn-block">Ingrese</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
+
   </form>
-  <!--autenticacion google-->
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <meta name="google-signin-client_id"
-    content="233627494745-05sc0lkijip6g7tqjkb75t0703ckfo9u.apps.googleusercontent.com">
-  <div class="g-signin2" data-onsuccess="onSignIn"></div>
-  <!--autenticacion google-->
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
-  
+
 </body>
 
 </html>
