--- a/login.html
+++ b/login.html
@@ -7,40 +7,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
 
-  <!--autenticacion google-->
+  <!--autenticacion google
   <meta name="google-signin-client_id"
     content="233627494745-05sc0lkijip6g7tqjkb75t0703ckfo9u.apps.googleusercontent.com">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <!--autenticacion google-->
+      autenticacion google-->
 
   <title>eMercado - Todo lo que busques está aquí</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/signin.css" rel="stylesheet">
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
 
+    body {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      background-color: #f5f5f5;
+    }
+
+    .signin {
+      width: 100%;
+      max-width: 330px;
+      padding: 15px;
+      margin: auto;
+    }
+  </style>
 </head>
+</head>
+
 
 <body class="text-center">
   <form class="form-signin" action="index.html">
@@ -52,13 +59,12 @@
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
       <label>
-        <!--autenticacion google-->
+        <!--autenticacion google
         <div class="g-signin2" data-onsucess="OnSignIn" data-scope="https://www.googleapis.com/auth/plus.login"
           data-accesstype="offline" data-redirecturi="http://localhost:5500/index.html"></div>
-        <!--autenticacion google-->
+            autenticacion google-->
         <input type="checkbox" value="remember-me"> Recuerdame
       </label>
-
     </div>
     <button class="btn btn-lg btn-primary btn-block">Ingrese</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
