--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 <body class="text-center">
-  <form class="form-signin" action="index.html">
+  <form class="form-signin" action="login.html">
     <img class="mb-4" src="img/login.png" alt="" width="200" height="92">
     <h1 class="h3 mb-3 font-weight-normal">Ingrese su usuario</h1>
     <label for="inputEmail" class="sr-only">Usuario o Correo electrónico</label>
