--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
 
-  <!--autenticacion google
+  <!--autenticacion google-->
   <meta name="google-signin-client_id"
     content="233627494745-05sc0lkijip6g7tqjkb75t0703ckfo9u.apps.googleusercontent.com">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-      autenticacion google-->
+  <!--autenticacion google-->
 
   <title>eMercado - Todo lo que busques está aquí</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
@@ -59,10 +59,10 @@
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
       <label>
-        <!--autenticacion google
+        <!--autenticacion google-->
         <div class="g-signin2" data-onsucess="OnSignIn" data-scope="https://www.googleapis.com/auth/plus.login"
           data-accesstype="offline" data-redirecturi="http://localhost:5500/index.html"></div>
-            autenticacion google-->
+        <!--autenticacion google-->
         <input type="checkbox" value="remember-me"> Recuerdame
       </label>
     </div>
