cambio redireccion google github page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <label>
         <!--autenticacion google-->
         <div class="g-signin2" data-onsucess="OnSignIn" data-scope="https://www.googleapis.com/auth/plus.login"
-          data-accesstype="offline" data-redirecturi="http://localhost:5500/index.html"></div>
+          data-accesstype="offline" data-redirecturi="https://marcoliguori236.github.io/repo_ecommerce/login.html"></div>
         <!--autenticacion google-->
         <input type="checkbox" value="remember-me"> Recuerdame
       </label>
