--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 <body class="text-center">
-  <form class="form-signin" action="login.html">
+  <div class="form-signin">
     <img class="mb-4" src="img/login.png" alt="" width="200" height="92">
     <h1 class="h3 mb-3 font-weight-normal">Ingrese su usuario</h1>
     <label for="inputEmail" class="sr-only">Usuario o Correo electrónico</label>
@@ -66,10 +66,10 @@
         <input type="checkbox" value="remember-me"> Recuerdame
       </label>
     </div>
-    <button class="btn btn-lg btn-primary btn-block">Ingrese</button>
+    <button id="submitBtn" class="btn btn-lg btn-primary btn-block">Ingrese</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
 
-  </form>
+  </div>
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
