--- a/products.html
+++ b/products.html
@@ -18,36 +18,114 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+      <a class="py-2 d-none d-md-inline-block" href="login.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <!--cuadro de usuario en el index-->
+      <div id="info-user">
+        <a class="py-2 d-none d-md-inline-block"  id="user" style="color: bisque;">
+        </a>
+        <button class="py-2 d-none d-md-inline-block" id="salir">Salir</button>
+      </div>
+    </div>
+    <!--cuadro de usuario en el index-->
     </div>
   </nav>
   <main role="main" class="pb-5">
     <div class="text-center p-4">
       <h2>Autos</h2>
     </div>
+
+    <!--Filtros-->
     <div class="container">
       <div class="row">
-        <div class="list-group" id="cat-list-container">
+        <div class="col text-right">
+          <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+            <label class="btn btn-light" id="sortByCount">
+              <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
+            </label>
+            <!--filtro creciente precio-->
+            <label class="btn btn-light" id="sortByPriceAsc">
+              <input type="radio" name="options" autocomplete="off"><i
+                class="fas fa-sort-amount-down mr-1"></i>Prec.(crec)
+            </label>
+            <!--filtro creciente precio-->
+            <!--filtro descendente precio-->
+            <label class="btn btn-light" id="sortByPriceDesc">
+              <input type="radio" name="options" autocomplete="off"><i
+                class="fas fa-sort-amount-down mr-1"></i>Prec.(desc)
+            </label>
+            <!--filtro descendente precio-->
+
+          </div>
         </div>
       </div>
-    </div>
-
-    <div id="spinner-wrapper">
-      <div class="lds-ring">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      <div class="row justify-content-end">
+        <div class="col-md-6"></div>
+        <div class="col-md-6 col-sm-12 mb-1 container">
+          <div class="row container p-0 m-0">
+            <div class="col">
+              <p class="font-weight-normal text-right my-2">Prec.</p>
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+            </div>
+            <div class="col-3 p-0">
+              <div class="btn-group" role="group">
+                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/products.js"></script>
+      <!--Filtros-->
+
+      <!--buscador por palabra desafiate 2-->
+      <div class="row justify-content-end">
+        <div class="col-md-6"></div>
+        <div class="col-md-6 col-sm-12 mb-1 container">
+          <div class="row container p-0 m-0">
+            <div class="col">
+              <p class="font-weight-normal text-right my-2">Buscar por nombre: </p>
+            </div>
+            <div class="col">
+              <input type="text" id="buscador" class="btn btn-light">
+            </div>
+            <div class="col-3 p-0">
+              <div class="btn-group" role="group">
+                <button id="limpBusc" class="btn btn-link btn-sm">Limpiar busqueda</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--buscador por palabra desafiate 2-->
+
+      <div class="container">
+        <div class="row">
+          <div class="list-group" id="cat-list-container">
+          </div>
+        </div>
+      </div>
+
+      <div id="spinner-wrapper">
+        <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <script src="js/jquery-3.4.1.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/init.js"></script>
+      <script src="js/products.js"></script>
 </body>
 
 </html>
