--- a/product-info.html
+++ b/product-info.html
@@ -18,13 +18,21 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+      <a class="py-2 d-none d-md-inline-block" href="login.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <!--cuadro de usuario -->
+      <div id="info-user">
+        <a class="py-2 d-none d-md-inline-block" id="user" style="color: bisque;">
+        </a>
+      </div>
+    </div>
+    <!--cuadro de usuario -->
     </div>
   </nav>
+  <!--
   <div class="container p-5">
     <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
       <h4 class="alert-heading">¡A trabajar! :)</h4>
@@ -33,6 +41,75 @@
       <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
     </div>
   </div>
+  -->
+  <!--Entrega 3-->
+  <div class="container mt-5">
+    <h3 id="productName"></h3>
+    <hr class="my-3">
+    <dl>
+      <dt>Descripción</dt>
+      <dd>
+        <p id="productDescription"></p>
+      </dd>
+
+      <dt>Costo en dólares américanos: </dt>
+      <dd>
+        <p id="productCost"></p>
+      </dd>
+
+      <dt>Cantidad de vendidos</dt>
+      <dd>
+        <p id="soldCount"></p>
+      </dd>
+
+      <dt>Imágenes ilustrativas</dt>
+      <dd>
+        <div class="row text-center text-lg-left pt-2" id="productImagesGallery">
+        </div>
+      </dd>
+    </dl>
+    <!--Entrega 3 - parte 2-->
+    <dt>Comentarios</dt>
+    <dd>
+      <div class="container">
+        <div class="row">
+          <div class="list-group" id="cat-list-container">
+          </div>
+        </div>
+      </div>
+    </dd>
+    <!--Entrega 3 - parte 2-->
+
+    <!--Entrega 3 - parte 3-->
+    <dt>¡Deja tu reseña de este producto para nosotros y otros compradores!</dt>
+    <dd>
+      <div id="newCommentContent" style="display: none;">
+    <dt>
+      <textarea id="newComm" rows="8" cols="60"></textarea>
+    </dt>
+
+    <dt>Calificalo:</dt>
+
+    <select id="newCal">
+
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+    <br><br>
+
+    <button class="btn btn-primary btn-lg" id="enviarComm">Enviar</button>
+
+  </div>
+  </dd>
+
+  <br>
+
+  <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos</a>
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
