--- a/product-info.html
+++ b/product-info.html
@@ -80,30 +80,28 @@
     </dd>
     <!--Entrega 3 - parte 2-->
 
-    <!--Entrega 3 - parte 3-->
-    <dt>¡Deja tu reseña de este producto para nosotros y otros compradores!</dt>
-    <dd>
+    
+    
+      <!--Entrega 3 - parte 3-->
       <div id="newCommentContent" style="display: none;">
-    <dt>
-      <textarea id="newComm" rows="8" cols="60"></textarea>
-    </dt>
+        <dt>¡Deja tu reseña de este producto para nosotros y otros compradores!</dt>
+        <textarea id="newComm" rows="8" cols="60"></textarea>
+        <dt>Calificalo:</dt>
 
-    <dt>Calificalo:</dt>
+        <select id="newCal">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
 
-    <select id="newCal">
-
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    <br><br>
-
-    <button class="btn btn-primary btn-lg" id="enviarComm">Enviar</button>
+        <br><br>
+        <button class="btn btn-primary btn-lg" id="enviarComm">Enviar</button>
+      </div>
 
   </div>
-  </dd>
+  
 
   <br>
 
