--- a/product-info.html
+++ b/product-info.html
@@ -50,16 +50,26 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <!--cuadro de usuario -->
-      <div id="info-user">
-        <a class="py-2 d-none d-md-inline-block" id="user" style="color: bisque;">
-        </a>
+      <!--Boton para ingresar, solo se muestra si no hay usuario ingresado-->
+      <button class="btn btn-primary btn-lg" id="ingresar" onclick="window.location.href='index.html'" style="display: none;"></button>
+      
+      <!--cuadro de usuario-->
+      <div class="dropdown" id="info-user" style="display: none;">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="user" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="cart.html">Ver carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" id="salir" href="index.html">Salir</a>
+        </div>
       </div>
     </div>
-    <!--cuadro de usuario -->
-    </div>
+
   </nav>
+
+
   <!--Entrega 3-->
   <div class="container mt-5">
     <h3 id="productName"></h3>
@@ -82,8 +92,38 @@
 
       <dt>Imágenes ilustrativas</dt>
       <dd>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/prod1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/prod1_1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/prod1_2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/prod1_3.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/prod1_4.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        
+        <!--
         <div class="row text-center text-lg-left pt-2" id="productImagesGallery">
         </div>
+        -->
       </dd>
     </dl>
     <!--Entrega 3 - parte 2-->
@@ -167,10 +207,15 @@
       <div></div>
     </div>
   </div>
+
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+
 </body>
 
 </html>
