--- a/cart.html
+++ b/cart.html
@@ -40,14 +40,9 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <!--cuadro de usuario en el index-->
-      <div id="info-user">
-        <a class="py-2 d-none d-md-inline-block"  id="user" style="color: bisque;">
-        </a>
-      </div>
-    </div>
-    <!--cuadro de usuario en el index-->
+      <div id="ingresar"></div>
+      <!--cuadro de usuario-->
+      <div id="desplegable"></div>
     </div>
   </nav>
   <div class="container p-5">
