--- a/categories.html
+++ b/categories.html
@@ -23,14 +23,10 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <!--cuadro de usuario en el index-->
-      <div id="info-user">
-        <a class="py-2 d-none d-md-inline-block" id="user" style="color: bisque;">
-        </a>
-      </div>
-    </div>
-    <!--cuadro de usuario en el index-->
+      <div id="ingresar"></div>
+      <!--cuadro de usuario-->
+      <div id="desplegable"></div>
+    </div>  
   </nav>
   <main role="main" class="pb-5">
     <div class="text-center p-4">
